[gd_scene load_steps=2 format=3 uid="uid://brjjktxt30pg7"]

[ext_resource type="Script" uid="uid://cvcc5kd3buyb6" path="res://Main.gd" id="1_glv2v"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Combat Simulation"
horizontal_alignment = 1

[node name="Selectors" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 500
theme_override_constants/v_separation = 5
columns = 2

[node name="Label" type="Label" parent="Panel/VBox/Selectors"]
layout_mode = 2
text = "Team A Combatant Selection"

[node name="Label2" type="Label" parent="Panel/VBox/Selectors"]
layout_mode = 2
text = "Team B Combatant Selection"

[node name="TeamA_Slot1" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="TeamB_Slot1" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="TeamA_Slot2" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="TeamB_Slot2" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="TeamA_Slot3" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="TeamB_Slot3" type="OptionButton" parent="Panel/VBox/Selectors"]
layout_mode = 2

[node name="SummonButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Summon New Character"

[node name="StartSimulationButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Begin Simulation"

[node name="HealthDisplays" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 650

[node name="TeamA_VBox" type="VBoxContainer" parent="Panel/VBox/HealthDisplays"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/HealthDisplays/TeamA_VBox"]
layout_mode = 2
text = "Team A Health"

[node name="Health1" type="Label" parent="Panel/VBox/HealthDisplays/TeamA_VBox"]
layout_mode = 2
text = "..."

[node name="Health2" type="Label" parent="Panel/VBox/HealthDisplays/TeamA_VBox"]
layout_mode = 2
text = "..."

[node name="Health3" type="Label" parent="Panel/VBox/HealthDisplays/TeamA_VBox"]
layout_mode = 2
text = "..."

[node name="TeamB_VBox" type="VBoxContainer" parent="Panel/VBox/HealthDisplays"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/HealthDisplays/TeamB_VBox"]
layout_mode = 2
text = "Team B Health"

[node name="Health1" type="Label" parent="Panel/VBox/HealthDisplays/TeamB_VBox"]
layout_mode = 2
text = "..."

[node name="Health2" type="Label" parent="Panel/VBox/HealthDisplays/TeamB_VBox"]
layout_mode = 2
text = "..."

[node name="Health3" type="Label" parent="Panel/VBox/HealthDisplays/TeamB_VBox"]
layout_mode = 2
text = "..."

[node name="CombatLog" type="RichTextLabel" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
scroll_following = true

[node name="WinnerLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
horizontal_alignment = 1
